--- a/Readme
+++ b/Readme
@@ -1,3 +1,3 @@
-This portfolio is for testing html, css. Not fully responsive website and only one page website.
+This is for testing html, css. Not fully responsive website and only one page website.
 
 Thank you.
